[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/Fader.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="FaderCanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="FadeRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FadeAnimation" type="AnimationPlayer" parent="FadeRect"]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
[connection signal="animation_finished" from="FadeRect/FadeAnimation" to="." method="_on_FadeAnimation_animation_finished"]
